# ProjectAgamemnon

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  conanfile.py  pixi.toml
.github/workflows/: _required.yml  build-test.yml  claude-review.yml  code-coverage.yml  python-client-release.yml  python-client.yml  static-analysis.yml
clients/python/: .gitignore  README.md  pixi.toml  pyproject.toml
clients/python/src/agamemnon_client/: __init__.py  client.py  errors.py  models.py
clients/python/tests/: test_client.py  test_errors.py  test_models.py
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake
include/projectagamemnon/: nats_client.hpp  routes.hpp  store.hpp  version.hpp
scripts/: check-release-readiness.sh  coverage.sh  format.sh  lint.sh  test.sh
src/: main.cpp  nats_client.cpp  routes.cpp  server_main.cpp  store.cpp  version_info.cpp
test/src/: test_main.cpp
