[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HomericIntelligence-Agamemnon"
version = "0.1.0"
description = "Async Python client for the Agamemnon REST API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.urls]
Repository = "https://github.com/HomericIntelligence/ProjectAgamemnon"

[tool.hatch.build.targets.wheel]
packages = ["src/agamemnon_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["agamemnon_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agamemnon_client"]

[tool.coverage.report]
fail_under = 96
